# digit-recognition

./: CMakeLists.txt
assets/params/: params.txt
src/: digit-recognition.cpp  digit-recognition.h
src/grid/: Grid.cpp  Grid.hpp
src/managers/: FileManager.cpp  FileManager.hpp
src/nn/: NN.cpp  NN.hpp  params.txt  paramsv1.txt  paramsv2.txt
src/ui/: Button.cpp  Button.hpp
src/views/: Grid.cpp  Grid.hpp  Plot.cpp  Plot.hpp
